--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 .DS_Store
 *.html
 *.pdf
+*.md
 *.RData
 /.Rproj.user/
 Analysis/03_Sediment_Analyses/01_SedimentAnalyses/ArcGISDesktopAdvanced_SingleUse_909827.prvc
 Analysis/04_MGCV_Analysis/r_ListForFiguresInfo.csv
 log*.txt
+*_files
 Presentations
