--- a/Analysis/02_Empirical_Selectivity/.gitignore
+++ b/Analysis/02_Empirical_Selectivity/.gitignore
@@ -13,3 +13,5 @@ q01_SurveyLevelSelectivityResults.pdf.md
 r_ListForFiguresInfo.csv
 r_ListForTablesInfo.csv
 zz_old
+csv_ListForTablesInfo.csv
+csv_ListForFiguresInfo.csv
