--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,5 @@ Analysis/03_Sediment_Analyses/01_SedimentAnalyses/ArcGISDesktopAdvanced_SingleUs
 Analysis/04_MGCV_Analysis/r_ListForFiguresInfo.csv
 log*.txt
 *_files
+*_cache
 Presentations
